Datagen really not work, see Quilt Issue #8

--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,15 @@ loom {
 		}
 	}
 
-	runs {
-		datagen {
-			server()
-			name "Data Generation"
-			vmArg "-Dfabric-api.datagen"
-			vmArg "-Dfabric-api.datagen.output-dir=${project.file("src/main/generated")}"
-			runDir "build/datagen"
-		}
-	}
+//	runs {
+//		datagen {
+//			dat
+//			name "Data Generation"
+//			vmArg "-Dfabric-api.datagen"
+//			vmArg "-Dfabric-api.datagen.output-dir=${project.file("src/main/generated")}"
+//			runDir "build/datagen"
+//		}
+//	}
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
