--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,8 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 
-	maven {
-		url = 'https://jitpack.io'
-	}
+	maven { url = 'https://jitpack.io'             }
+	maven { url = 'https://maven.kyrptonaught.dev' }
 }
 
 loom {
@@ -57,6 +56,9 @@ dependencies {
 
 	modImplementation libs.ludocrypt.limlib
 	include libs.ludocrypt.limlib
+
+	modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta65-1.20'
+	include 'net.kyrptonaught:customportalapi:0.0.1-beta65-1.20'
 }
 
 processResources {
